tests/type_errors/maximum_func_variant.nos
# expect: Red
# Variants auto-derive Ord (alphabetical by constructor name)
type Color = Red | Green | Blue
main() = maximum([Red, Green, Blue])
